deploy/cval-evaluator/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cval-postgres
  namespace: gcr-admin
  labels:
    app.kubernetes.io/name: cval-nccl-postgres
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cval-nccl-postgres
    app.kubernetes.io/component: database
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
