deploy/cval-evaluator/base/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cval-postgres-ingress
  namespace: gcr-admin
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cval-nccl-postgres
      app.kubernetes.io/component: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: resident-evaluator
      ports:
        - protocol: TCP
          port: 5432
